syntax = "proto3";
package raft;


service Raft {
	rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
	rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
}

message RequestVoteArgs {
	uint64 Term = 1;
	uint64 CandidateId = 2;
	uint64 LastLogIndex = 3;
	uint64 LastLogTerm = 4;
}

message RequestVoteReply {
	uint64 Term = 1;
	bool VoteGranted = 2;
}

message AppendEntriesArgs {
	uint64 Term = 1;
	uint64 LeaderId = 2;
	uint64 PrevLogIndex = 3;
	uint64 PrevLogTerm = 4;
	repeated LogEntry Entries = 5;
	uint64 LeaderCommit = 6;
}

message AppendEntriesReply {
	uint64 Term = 1;
	bool Success = 2;
}

message LogEntry {
	string Command = 1; 
	uint64 Term = 2;
}